# LMS

./: README.md  auth.py  database.py  error_handlers.py  fastapp.py  pyproject.toml  pyvenv.cfg  requirements.txt  snulms-dump.sql
api/: database_queries.py  routes.py
static/css/: dashboard.css
templates/: admin_dashboard.html  course.html  faculty_dashboard.html  index.html  login.html  register.html  student_dashboard.html
templates/admin/: base_admin.html  edit_user.html  manage_courses.html  manage_users.html  reports.html  settings.html
templates/errors/: 404.html  500.html
templates/faculty/: faculty_assignments.html  faculty_course.html  faculty_courses.html  faculty_reports.html  faculty_students.html  mark_attendance.html  profile.html  reports.html  students.html  view_attendance.html  view_submissions.html
templates/student/: assignments.html  attendance.html  courses.html  grades.html  profile.html  submit_assignment.html
