[project]
name = "lms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "dotenv==0.9.9",
    "fastapi==0.115.11",
    "h11==0.14.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "mysql==0.0.3",
    "mysql-connector==2.2.9",
    "mysqlclient==2.2.7",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.8.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "sniffio==1.3.1",
    "starlette==0.46.1",
    "typing-extensions==4.12.2",
    "uvicorn==0.34.0",
    "werkzeug==3.1.3",
]
